--- a/CSS/AP2_Q01.css
+++ b/CSS/AP2_Q01.css
@@ -2,16 +2,16 @@ body{
     background-color: rgb(75, 71, 71);
     color: white;
     font: normal 10pt Arial;
-    text-align: center;
+    text-align: justify;
 }
 section#div{
     background: white;
     border-radius: 10px;
-    padding: 15px;
+    padding: 150px;
     width: 500px;
     margin: auto;
     box-shadow: 5px 3px 10px black;
-    text-align: ;
+    text-align:left 800px;
 }
 select#flista{
     width: 150px;
